[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/UI/DebugConsole.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/audio/ScarePlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Fader.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Narrator.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Gridmaps/GridMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/UI/GUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/rooms/100/room50.gd" type="Script" id=8]
[ext_resource path="res://scenes/objects/Floors Walls Etc/FloorObj1.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/enemies/GhostEnemy.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/objects/Floors Walls Etc/WallObj.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/WorldEnvironment.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/objects/doors/Door2Closed.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/objects/WallTorch.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/objects/Medkit.tscn" type="PackedScene" id=15]

[sub_resource type="NavigationMesh" id=1]
vertices = PoolVector3Array( -16.7, 4.3, -42, -16.7, 4.3, -51.9, -19.1, 4.3, -51.9, -19.1, 4.3, -42, -19.1, 3.3, -31.8, -16.7, 3.3, -31.8, -16.7, 4.3, -42, -19.1, 4.3, -42, -19.1, 4.3, -35.2, -19.1, 3.3, -33.5, -16.7, 3.3, -33.5, -16.7, 4.3, -35.2, -1.1, 0.3, -26.1, -1.1, 0.3, -24, 1, 0.3, -24.3, -1.7, 0.3, -26.7, -1.1, 0.3, -26.1, 1, 0.3, -24.3, 1, 0.3, -29.1, -1.7, 0.3, -26.7, 1, 0.3, -29.1, -7.7, 0.3, -29.1, -10.4, 0.3, -26.7, -16.4, 2.3, -29.1, -16.7, 3.3, -31.8, -19.1, 3.3, -31.8, -19.1, 2.3, -26.7, -16.55, 3.3, -30.45, -19.1, 3.3, -30.1, -19.1, 2.3, -28.4, -16.4, 2.3, -29.1, -19.1, 2.3, -26.7, -10.4, 0.3, -26.7, -7.7, 0.3, -29.1, -11.18, 0.3, -29.1, -12.92, 1.3, -29.1, -14.66, 1.3, -29.1, -17.36, 2.3, -26.7, -15.62, 1.3, -26.7, -12.14, 1.3, -26.7, 1, 0.3, -17.1, 1, 0.3, -24.3, -1.1, 0.3, -24, -1.1, 0.3, -16.8, 1, 0.3, -2.4, 1, 0.3, -9.6, -1.1, 0.3, -9.6, -1.1, 0.3, -2.4, 1, 0.3, -9.6, 1, 0.3, -17.1, -1.1, 0.3, -16.8, -1.1, 0.3, -9.6, -1.1, 0.3, -2.4, -1.1, 0.3, 5.1, 1, 0.3, 5.1, 1, 0.3, -2.4 )
polygons = [ PoolIntArray( 3, 2, 0 ), PoolIntArray( 0, 2, 1 ), PoolIntArray( 4, 9, 5 ), PoolIntArray( 5, 9, 10 ), PoolIntArray( 10, 9, 8 ), PoolIntArray( 10, 8, 11 ), PoolIntArray( 11, 8, 7 ), PoolIntArray( 11, 7, 6 ), PoolIntArray( 12, 14, 13 ), PoolIntArray( 16, 15, 17 ), PoolIntArray( 17, 15, 18 ), PoolIntArray( 20, 19, 21 ), PoolIntArray( 21, 19, 22 ), PoolIntArray( 24, 27, 25 ), PoolIntArray( 25, 27, 28 ), PoolIntArray( 28, 27, 23 ), PoolIntArray( 28, 23, 29 ), PoolIntArray( 29, 23, 26 ), PoolIntArray( 31, 30, 37 ), PoolIntArray( 37, 30, 38 ), PoolIntArray( 38, 30, 36 ), PoolIntArray( 38, 36, 35 ), PoolIntArray( 38, 35, 39 ), PoolIntArray( 39, 35, 34 ), PoolIntArray( 39, 34, 32 ), PoolIntArray( 32, 34, 33 ), PoolIntArray( 43, 42, 40 ), PoolIntArray( 40, 42, 41 ), PoolIntArray( 47, 46, 44 ), PoolIntArray( 44, 46, 45 ), PoolIntArray( 51, 50, 48 ), PoolIntArray( 48, 50, 49 ), PoolIntArray( 55, 54, 52 ), PoolIntArray( 52, 54, 53 ) ]
cell/height = 0.25
agent/radius = 0.9
agent/max_climb = 1.0

[sub_resource type="BoxShape" id=2]

[node name="world" type="Spatial"]
script = ExtResource( 8 )
_room = "res://scenes/rooms/100/room50.tscn"

[node name="Fader" parent="." instance=ExtResource( 3 )]

[node name="GUI" parent="Fader" instance=ExtResource( 6 )]

[node name="ScarePlayer" parent="Fader" instance=ExtResource( 2 )]

[node name="Player" parent="Fader" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.804409, 0.779566, 0 )
collision_mask = 3

[node name="WorldEnvironment1" parent="Fader" instance=ExtResource( 12 )]

[node name="Door2Closed" parent="Fader" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9846, 0, 0 )

[node name="WallTorch" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( -3.49691e-08, 0, -0.8, 0, 0.8, 0, 0.8, 0, -3.49691e-08, 1.99854, 1.86986, -13.1 )

[node name="WallTorch2" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( -0.8, 0, 6.99382e-08, 0, 0.8, 0, -6.99382e-08, 0, -0.8, 0.046637, 1.86986, 6 )

[node name="WallTorch3" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( -3.49691e-08, 0, -0.8, 0, 0.8, 0, 0.8, 0, -3.49691e-08, 1.99854, 1.86986, -27.7201 )

[node name="WallTorch4" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( -3.49691e-08, 0, 0.8, 0, 0.8, 0, -0.8, 0, -3.49691e-08, -20.0015, 5.76986, -27.7201 )

[node name="WallTorch5" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( -3.49691e-08, 0, 0.8, 0, 0.8, 0, -0.8, 0, -3.49691e-08, -20.0015, 5.76986, -42.7201 )

[node name="WallTorch6" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( -3.49691e-08, 0, 0.8, 0, 0.8, 0, -0.8, 0, -3.49691e-08, -20.0015, 5.76986, -60.9201 )

[node name="WallTorch7" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( 1.04907e-07, 0, -0.8, 0, 0.8, 0, 0.8, 0, 1.04907e-07, -4.10146, 5.76986, -65.3201 )

[node name="WallTorch8" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( 1.04907e-07, 0, -0.8, 0, 0.8, 0, 0.8, 0, 1.04907e-07, -4.10146, 5.76986, -57.0201 )

[node name="WallTorch9" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( -1.74846e-07, 0, 0.8, 0, 0.8, 0, -0.8, 0, -1.74846e-07, -2.00146, 5.76986, -57.0201 )

[node name="WallTorch10" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( -1.74846e-07, 0, 0.8, 0, 0.8, 0, -0.8, 0, -1.74846e-07, -2.00146, 5.76986, -65.3201 )

[node name="WallTorch11" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -12.2015, 5.76986, -68.0201 )

[node name="WallTorch12" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( -0.8, 0, -6.99382e-08, 0, 0.8, 0, 6.99382e-08, 0, -0.8, -12.2015, 5.76986, -54.0201 )

[node name="WallTorch13" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( 2.44784e-07, 0, -0.8, 0, 0.8, 0, 0.8, 0, 2.44784e-07, 9.99854, 5.76986, -65.3201 )

[node name="WallTorch14" parent="Fader" instance=ExtResource( 14 )]
transform = Transform( 2.44784e-07, 0, -0.8, 0, 0.8, 0, 0.8, 0, 2.44784e-07, 9.99854, 5.76986, -57.0201 )

[node name="Medkit" parent="Fader" instance=ExtResource( 15 )]
transform = Transform( 0.249567, -0.0147133, 0, 0.0147133, 0.249567, 0, 0, 0, 0.25, -1.83277, 4.00561, -67.5285 )

[node name="Medkit2" parent="Fader" instance=ExtResource( 15 )]
transform = Transform( -0.0217889, 0, 0.249049, 0.030209, 0.248154, 0.00264295, -0.24721, 0.0303244, -0.0216281, 4.51779, 4.00561, -54.2183 )

[node name="console" parent="." instance=ExtResource( 1 )]

[node name="Narrator" parent="." instance=ExtResource( 4 )]

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62099, 0 )
navmesh = SubResource( 1 )

[node name="GhostEnemy" parent="Navigation" instance=ExtResource( 10 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -14.7, 2.5, -29.4 )
collision_layer = 0
collision_mask = 0

[node name="AreaHolder" type="Spatial" parent="."]

[node name="Check1" type="Area" parent="AreaHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, -4.6, 1.7, -28 )

[node name="CollisionShape" type="CollisionShape" parent="AreaHolder/Check1"]
shape = SubResource( 2 )

[node name="Check2" type="Area" parent="AreaHolder"]
transform = Transform( -4.37114e-08, 0, -2, 0, 1, 0, 1, 0, -8.74228e-08, -18, 4.9, -34.2 )

[node name="CollisionShape" type="CollisionShape" parent="AreaHolder/Check2"]
shape = SubResource( 2 )

[node name="Check3" type="Area" parent="AreaHolder"]
transform = Transform( -4.37114e-08, 0, -2, 0, 1, 0, 1, 0, -8.74228e-08, -17.5, 4.9, -55.8295 )

[node name="CollisionShape" type="CollisionShape" parent="AreaHolder/Check3"]
shape = SubResource( 2 )

[node name="ObjHolder" type="Spatial" parent="."]

[node name="FloorObj" parent="ObjHolder" instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 0.5, 0, 0, 0, 2, -14, 0.5, -28 )

[node name="FloorObj2" parent="ObjHolder" instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 0.5, 0, 0, 0, 2, -18, 2.5, -32 )

[node name="FloorObj3" parent="ObjHolder" instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 0.5, -18, 3, -41.5 )

[node name="FloorObj4" parent="ObjHolder" instance=ExtResource( 9 )]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 0.5, -18, 3, -47.5 )

[node name="WallObj" parent="ObjHolder" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 0.5, -18, 6, -53.5 )

[node name="GridMap" parent="." instance=ExtResource( 5 )]
data = {
"cells": PoolIntArray( 1, 0, 0, 65534, 0, 0, 65537, 0, 0, 131070, 0, 0, 131072, 0, 2, 196607, 0, 2, -65536, 0, 1, -1, 0, 1, 1, 1, 0, 65534, 1, 0, 65537, 1, 0, 131070, 1, 0, 131072, 1, 2, 196607, 1, 2, -65536, 1, 1, -1, 1, 1, 1, 2, 0, 65534, 2, 0, 65537, 2, 0, 131070, 2, 0, 131072, 2, 2, 196607, 2, 2, -65536, 2, 1, -1, 2, 1, 0, 3, 0, 65535, 3, 0, 65536, 3, 0, 131071, 3, 0, 131072, 65501, 0, 131073, 65501, 0, 131074, 65501, 0, 131075, 65501, 0, 131076, 65501, 0, 196598, 65501, 0, 196599, 65501, 0, 196600, 65501, 0, 196601, 65501, 0, 196602, 65501, 0, 196603, 65501, 0, 196604, 65501, 0, 196605, 65501, 0, 196607, 65501, 0, 196608, 65501, 0, 196609, 65501, 0, 196610, 65501, 0, 196611, 65501, 0, 196612, 65501, 0, 262134, 65501, 0, 262135, 65501, 0, 262136, 65501, 0, 262137, 65501, 0, 262138, 65501, 0, 262139, 65501, 0, 262140, 65501, 0, 262141, 65501, 0, 262143, 65501, 0, 65536, 65502, 1, 65537, 65502, 1, 65538, 65502, 1, 65539, 65502, 1, 65540, 65502, 1, 65542, 65502, 1, 131062, 65502, 1, 131063, 65502, 1, 131064, 65502, 1, 131065, 65502, 1, 131066, 65502, 1, 131067, 65502, 1, 131068, 65502, 1, 131069, 65502, 1, 131071, 65502, 1, 131077, 65502, 0, 196597, 65502, 0, 196606, 65502, 0, 196613, 65502, 0, 262133, 65502, 0, 262142, 65502, 0, 262144, 65502, 2, 262145, 65502, 2, 262146, 65502, 2, 262147, 65502, 2, 262148, 65502, 2, 327670, 65502, 2, 327671, 65502, 2, 327672, 65502, 2, 327673, 65502, 2, 327674, 65502, 2, 327675, 65502, 2, 327676, 65502, 2, 327677, 65502, 2, 327679, 65502, 2, 65536, 65503, 1, 65537, 65503, 1, 65538, 65503, 1, 65539, 65503, 1, 65540, 65503, 1, 65542, 65503, 1, 131062, 65503, 1, 131063, 65503, 1, 131064, 65503, 1, 131065, 65503, 1, 131066, 65503, 1, 131067, 65503, 1, 131068, 65503, 1, 131069, 65503, 1, 131071, 65503, 1, 131077, 65503, 0, 196597, 65503, 0, 196606, 65503, 0, 196613, 65503, 0, 262133, 65503, 0, 262142, 65503, 0, 262144, 65503, 2, 262145, 65503, 2, 262146, 65503, 2, 262147, 65503, 2, 262148, 65503, 2, 327670, 65503, 2, 327671, 65503, 2, 327672, 65503, 2, 327673, 65503, 2, 327674, 65503, 2, 327675, 65503, 2, 327676, 65503, 2, 327677, 65503, 2, 327679, 65503, 2, 65536, 65504, 1, 65537, 65504, 1, 65538, 65504, 1, 65539, 65504, 1, 65540, 65504, 1, 65542, 65504, 1, 131062, 65504, 1, 131063, 65504, 1, 131064, 65504, 1, 131065, 65504, 1, 131066, 65504, 1, 131067, 65504, 1, 131068, 65504, 1, 131069, 65504, 1, 131071, 65504, 1, 131077, 65504, 0, 196597, 65504, 0, 196606, 65504, 0, 196613, 65504, 0, 262133, 65504, 0, 262142, 65504, 0, 262144, 65504, 2, 262145, 65504, 2, 262146, 65504, 2, 262147, 65504, 2, 262148, 65504, 2, 327670, 65504, 2, 327671, 65504, 2, 327672, 65504, 2, 327673, 65504, 2, 327674, 65504, 2, 327675, 65504, 2, 327676, 65504, 2, 327677, 65504, 2, 327679, 65504, 2, 65536, 65505, 1, 65537, 65505, 1, 65538, 65505, 1, 65539, 65505, 1, 65540, 65505, 1, 65541, 65505, 1, 65542, 65505, 1, 131062, 65505, 1, 131063, 65505, 1, 131064, 65505, 1, 131065, 65505, 1, 131066, 65505, 1, 131067, 65505, 1, 131068, 65505, 1, 131069, 65505, 1, 131070, 65505, 1, 131071, 65505, 1, 196597, 65505, 0, 262133, 65505, 0, 262144, 65505, 2, 262145, 65505, 2, 262146, 65505, 2, 262147, 65505, 2, 262148, 65505, 2, 327670, 65505, 2, 327671, 65505, 2, 327672, 65505, 2, 327673, 65505, 2, 327674, 65505, 2, 327675, 65505, 2, 327676, 65505, 2, 327677, 65505, 2, 327678, 65505, 2, 327679, 65505, 2, 65536, 65506, 1, 65537, 65506, 1, 65538, 65506, 1, 65539, 65506, 1, 65540, 65506, 1, 131062, 65506, 1, 131063, 65506, 1, 131064, 65506, 1, 131065, 65506, 1, 131066, 65506, 1, 131067, 65506, 1, 131068, 65506, 1, 131069, 65506, 1, 131071, 65506, 1, 131077, 65506, 0, 196597, 65506, 0, 196606, 65506, 0, 196613, 65506, 0, 262133, 65506, 0, 262142, 65506, 0, 262144, 65506, 2, 262145, 65506, 2, 262146, 65506, 2, 262147, 65506, 2, 262148, 65506, 2, 327670, 65506, 2, 327671, 65506, 2, 327672, 65506, 2, 327673, 65506, 2, 327674, 65506, 2, 327675, 65506, 2, 327676, 65506, 2, 327677, 65506, 2, 327679, 65506, 2, 65536, 65507, 1, 65537, 65507, 1, 65538, 65507, 1, 65539, 65507, 1, 65540, 65507, 1, 131062, 65507, 1, 131063, 65507, 1, 131064, 65507, 1, 131065, 65507, 1, 131066, 65507, 1, 131067, 65507, 1, 131068, 65507, 1, 131069, 65507, 1, 131071, 65507, 1, 131077, 65507, 0, 196597, 65507, 0, 196606, 65507, 0, 196613, 65507, 0, 262133, 65507, 0, 262142, 65507, 0, 262144, 65507, 2, 262145, 65507, 2, 262146, 65507, 2, 262147, 65507, 2, 262148, 65507, 2, 327670, 65507, 2, 327671, 65507, 2, 327672, 65507, 2, 327673, 65507, 2, 327674, 65507, 2, 327675, 65507, 2, 327676, 65507, 2, 327677, 65507, 2, 327679, 65507, 2, 65536, 65508, 1, 65537, 65508, 1, 65538, 65508, 1, 65539, 65508, 1, 65540, 65508, 1, 131062, 65508, 1, 131063, 65508, 1, 131064, 65508, 1, 131065, 65508, 1, 131066, 65508, 1, 131067, 65508, 1, 131068, 65508, 1, 131069, 65508, 1, 131071, 65508, 1, 131077, 65508, 0, 196597, 65508, 0, 196606, 65508, 0, 196613, 65508, 0, 262133, 65508, 0, 262142, 65508, 0, 262144, 65508, 2, 262145, 65508, 2, 262146, 65508, 2, 262147, 65508, 2, 262148, 65508, 2, 327670, 65508, 2, 327671, 65508, 2, 327672, 65508, 2, 327673, 65508, 2, 327674, 65508, 2, 327675, 65508, 2, 327676, 65508, 2, 327677, 65508, 2, 327679, 65508, 2, 131062, 65509, 1, 131063, 65509, 1, 131072, 65509, 0, 131073, 65509, 0, 131074, 65509, 0, 131075, 65509, 0, 131076, 65509, 0, 196597, 65509, 0, 196600, 65509, 0, 196601, 65509, 0, 196602, 65509, 0, 196603, 65509, 0, 196604, 65509, 0, 196605, 65509, 0, 196607, 65509, 0, 196608, 65509, 0, 196609, 65509, 0, 196610, 65509, 0, 196611, 65509, 0, 196612, 65509, 0, 262133, 65509, 0, 262136, 65509, 0, 262137, 65509, 0, 262138, 65509, 0, 262139, 65509, 0, 262140, 65509, 0, 262141, 65509, 0, 262143, 65509, 0, 327670, 65509, 2, 327671, 65509, 2, 131062, 65510, 1, 131063, 65510, 1, 196597, 65510, 0, 196600, 65510, 0, 262133, 65510, 0, 262136, 65510, 0, 327670, 65510, 2, 327671, 65510, 2, 65526, 65511, 1, 65527, 65511, 1, 131062, 65511, 1, 131063, 65511, 1, 196597, 65511, 0, 196600, 65511, 0, 262133, 65511, 0, 262136, 65511, 0, 327670, 65511, 2, 327671, 65511, 2, 65525, 65512, 0, 65528, 65512, 0, 131061, 65512, 0, 131064, 65512, 0, 196597, 65512, 0, 196600, 65512, 0, 262133, 65512, 0, 262136, 65512, 0, 327670, 65512, 2, 327671, 65512, 2, -10, 65512, 1, -9, 65512, 1, 65525, 65513, 0, 65528, 65513, 0, 131061, 65513, 0, 131064, 65513, 0, 196597, 65513, 0, 196600, 65513, 0, 262133, 65513, 0, 262136, 65513, 0, 327670, 65513, 2, 327671, 65513, 2, -10, 65513, 1, -9, 65513, 1, 65526, 65514, 1, 65527, 65514, 1, 131062, 65514, 1, 131063, 65514, 1, 196597, 65514, 0, 196600, 65514, 0, 262133, 65514, 0, 262136, 65514, 0, 327670, 65514, 2, 327671, 65514, 2, 65525, 65515, 0, 65528, 65515, 0, 131061, 65515, 0, 131064, 65515, 0, 196597, 65515, 0, 196600, 65515, 0, 262133, 65515, 0, 262136, 65515, 0, 327670, 65515, 2, 327671, 65515, 2, -10, 65515, 1, -9, 65515, 1, 65525, 65516, 0, 65528, 65516, 0, 131061, 65516, 0, 131064, 65516, 0, 196597, 65516, 0, 196600, 65516, 0, 262133, 65516, 0, 262136, 65516, 0, 327670, 65516, 2, 327671, 65516, 2, -10, 65516, 1, -9, 65516, 1, 65526, 65517, 1, 65527, 65517, 1, 131062, 65517, 1, 131063, 65517, 1, 196597, 65517, 0, 196600, 65517, 0, 262133, 65517, 0, 262136, 65517, 0, 327670, 65517, 2, 327671, 65517, 2, 131062, 65518, 1, 131063, 65518, 1, 196597, 65518, 0, 196600, 65518, 0, 262133, 65518, 0, 262136, 65518, 0, 327670, 65518, 2, 327671, 65518, 2, 131061, 65519, 0, 131064, 65519, 0, 196597, 65519, 0, 196600, 65519, 0, 262133, 65519, 0, 262136, 65519, 0, 327670, 65519, 2, 327671, 65519, 2, 0, 65520, 0, 65528, 65520, 0, 65529, 65520, 0, 65530, 65520, 0, 65531, 65520, 0, 65532, 65520, 0, 65533, 65520, 0, 65534, 65520, 0, 65535, 65520, 0, 65536, 65520, 0, 131061, 65520, 0, 131064, 65520, 0, 131065, 65520, 0, 131066, 65520, 0, 131067, 65520, 0, 131068, 65520, 0, 131069, 65520, 0, 131070, 65520, 0, 131071, 65520, 0, 131072, 65520, 0, 196597, 65520, 0, 196600, 65520, 0, 196601, 65520, 0, 196602, 65520, 0, 196603, 65520, 0, 196604, 65520, 0, 196605, 65520, 0, 196606, 65520, 0, 196607, 65520, 0, 262133, 65520, 0, 262136, 65520, 0, 327670, 65520, 2, 327671, 65520, 2, 1, 65521, 0, 65525, 65521, 0, 65526, 65521, 1, 65527, 65521, 1, 65537, 65521, 0, 131061, 65521, 0, 131073, 65521, 0, 196597, 65521, 0, 196608, 65521, 2, 262133, 65521, 0, 262137, 65521, 2, 262138, 65521, 2, 262139, 65521, 2, 262140, 65521, 2, 262141, 65521, 2, 262142, 65521, 2, 262143, 65521, 2, 327670, 65521, 2, 327671, 65521, 2, 327672, 65521, 2, -65536, 65521, 1, -6, 65521, 1, -5, 65521, 1, -4, 65521, 1, -3, 65521, 1, -2, 65521, 1, -1, 65521, 1, 1, 65522, 0, 65525, 65522, 0, 65526, 65522, 1, 65527, 65522, 1, 65537, 65522, 0, 131061, 65522, 0, 131073, 65522, 0, 196597, 65522, 0, 196608, 65522, 2, 262133, 65522, 0, 262137, 65522, 2, 262138, 65522, 2, 262139, 65522, 2, 262140, 65522, 2, 262141, 65522, 2, 262142, 65522, 2, 262143, 65522, 2, 327670, 65522, 2, 327671, 65522, 2, 327672, 65522, 2, -65536, 65522, 1, -6, 65522, 1, -5, 65522, 1, -4, 65522, 1, -3, 65522, 1, -2, 65522, 1, -1, 65522, 1, 1, 65523, 0, 65525, 65523, 0, 65526, 65523, 0, 65527, 65523, 0, 65528, 65523, 0, 65529, 65523, 0, 65530, 65523, 0, 65531, 65523, 0, 65532, 65523, 0, 65533, 65523, 0, 65534, 65523, 0, 65537, 65523, 0, 131061, 65523, 0, 131062, 65523, 0, 131063, 65523, 0, 131064, 65523, 0, 131065, 65523, 0, 131066, 65523, 0, 131067, 65523, 0, 131068, 65523, 0, 131069, 65523, 0, 131070, 65523, 0, 131073, 65523, 0, 196597, 65523, 0, 196598, 65523, 0, 196599, 65523, 0, 196600, 65523, 0, 196601, 65523, 0, 196602, 65523, 0, 196603, 65523, 0, 196604, 65523, 0, 196605, 65523, 0, 196606, 65523, 0, 196608, 65523, 2, 262133, 65523, 0, 262134, 65523, 0, 262135, 65523, 0, 262136, 65523, 0, 262143, 65523, 2, -65536, 65523, 1, -1, 65523, 1, 1, 65524, 0, 65534, 65524, 0, 65537, 65524, 0, 131070, 65524, 0, 131073, 65524, 0, 196606, 65524, 0, 196608, 65524, 2, 262143, 65524, 2, -65536, 65524, 1, -1, 65524, 1, 1, 65525, 0, 65534, 65525, 0, 65537, 65525, 0, 131070, 65525, 0, 131073, 65525, 0, 196606, 65525, 0, 196608, 65525, 2, 262143, 65525, 2, -131072, 65525, 1, -65537, 65525, 1, -65535, 65525, 0, -2, 65525, 0, 1, 65526, 0, 65534, 65526, 0, 65537, 65526, 0, 131070, 65526, 0, 131072, 65526, 2, 196607, 65526, 2, -65536, 65526, 1, -1, 65526, 1, 1, 65527, 0, 65534, 65527, 0, 65537, 65527, 0, 131070, 65527, 0, 131072, 65527, 2, 196607, 65527, 2, -131072, 65527, 1, -65537, 65527, 1, -65535, 65527, 0, -2, 65527, 0, 1, 65528, 0, 65534, 65528, 0, 65537, 65528, 0, 131070, 65528, 0, 131072, 65528, 2, 196607, 65528, 2, -65536, 65528, 1, -1, 65528, 1, 1, 65529, 0, 65534, 65529, 0, 65537, 65529, 0, 131070, 65529, 0, 131072, 65529, 2, 196607, 65529, 2, -65536, 65529, 1, -1, 65529, 1, 1, 65530, 0, 65534, 65530, 0, 65537, 65530, 0, 131070, 65530, 0, 131072, 65530, 2, 196607, 65530, 2, -65536, 65530, 1, -1, 65530, 1, 1, 65531, 0, 65534, 65531, 0, 65537, 65531, 0, 131070, 65531, 0, 131072, 65531, 2, 196607, 65531, 2, -65536, 65531, 1, -1, 65531, 1, 1, 65532, 0, 65534, 65532, 0, 65537, 65532, 0, 131070, 65532, 0, 131072, 65532, 2, 196607, 65532, 2, -65536, 65532, 1, -1, 65532, 1, 1, 65533, 0, 65534, 65533, 0, 65537, 65533, 0, 131070, 65533, 0, 131072, 65533, 2, 196607, 65533, 2, -65536, 65533, 1, -1, 65533, 1, 1, 65534, 0, 65534, 65534, 0, 65537, 65534, 0, 131070, 65534, 0, 131072, 65534, 2, 196607, 65534, 2, -65536, 65534, 1, -1, 65534, 1, 1, 65535, 0, 65534, 65535, 0, 65537, 65535, 0, 131070, 65535, 0, 131072, 65535, 2, 196607, 65535, 2, -65536, 65535, 1, -1, 65535, 1 )
}

[connection signal="area_entered" from="AreaHolder/Check1" to="." method="_on_Check1_area_entered"]
[connection signal="area_entered" from="AreaHolder/Check2" to="." method="_on_Check2_area_entered"]
[connection signal="area_entered" from="AreaHolder/Check3" to="." method="_on_Check3_area_entered"]
